# Privacy-Eraser

./: .coverage  .flet  .gitignore  00.OVERVIEW.md  01.CORE_FEATURES.md  BUILD_OPTIMIZATION.md  CCLEANER_UI_GUIDE.md  CLAUDE.md  CLEANUP_GUIDE.md  KNOWN_ISSUES.md  LEGACY_INTEGRATION_COMPLETE.md  LEGACY_INTEGRATION_FINAL_SUMMARY.md  LEGACY_INTEGRATION_PLAN.md  MACOS_DEVELOPMENT.md  PATH_MIGRATION_GUIDE.md  PYSIDE6_REFACTOR_SUMMARY.md  PYSIMPLEGUI_POC.md  PrivacyEraser-v2.0.7-win-x64.zip.sha256  PrivacyEraser-v2.1.0-win-x64.zip.sha256  PrivacyEraser.spec  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  RELEASE_NOTES.md  TODO.md  build_spec.py  claude.md  debug_browser_detection.py  dev_server.py  main.py  pyproject.toml  readme.md  run_ccleaner_ui.py  run_poc.py  run_privacy_eraser.py  run_psg_poc.py  spec.md  test_comprehensive.py  test_gui_interactive.py  test_implementation.py  (+2 more)
.cursor/: cursor.md  mcp.json  pyside.md  pyside_examples.md  rules
.cursor/context/: architecture.md  runbook.md  testing.md
.github/workflows/: build-release.yml  build_and_release.yml  tests.yml
ai-docs/: README.md  flet.md  pyside.md
ai-docs/context/: architecture.md  runbook.md  testing.md
claudedocs/: poc_plan.md
docs/: 01_CORE_FEATURES.md  02_TECHNICAL_ARCHITECTURE.md  03_LICENSE_SYSTEM.md  04_AUTO_UPDATE.md  05_1_GUI_REDESIGN.md  05_GUI_DESIGN.md  06_DATABASE_SCHEMA.md  07_API_SPECIFICATION.md  08_DEPLOYMENT_GUIDE.md  09_TESTING_PLAN.md  10_MARKETING_PLAN.md  11_AUTOMATED_TESTS.md  ARCHITECTURE.md  BUILD.md  CURRENT_GUI_DESIGN_SUMMARY.md  DEVELOPMENT.md  QUICK_UI_UPGRADE.md  README.md  ROADMAP.md  TODO.md  UI_COMPONENT_LIBRARIES.md  UI_DESIGN_SYSTEM.md  mcp.json
docs/archive/: README.md
docs/legacy_analysis/: project_status_and_roadmap.md  winclean_analysis.md
docs/proposal_forms/: notice.md
proposal_docs/: 2. 공공기관 직원 아이디어 공모전 공고문.hwp  3. 작성서식(공공기관직원 대상 정책아이디어 공모).hwp  proposal.md  proposal_revised.md  시 산하 공공기관 대상 『시민행복, 시정발전 정책 아이디어 공모전』 개최 알림.hwp  시 산하 공공기관 직원 대상 「정책 아이디어 공모전」 참여 요청.hox  시 산하 공공기관 직원 대상 「정책 아이디어 공모전」 참여 요청.hwx
reference/deprecated/legacy_pyside6/: main.py  pyproject.toml
reference/ui_examples/: modern_pyside6_template.py
reference/winclean_source/WinClean/WinClean/View/Controls/: ScriptActionDictionaryView.xaml
scripts/: analyze_ui_screenshot.py  build_exe.bat  build_flet.bat  build_flet_web.bat  build_pack.bat  build_pyinstaller.bat  generate_icon.py  generate_test_data.py  quick_release.bat  release.bat  release_flutter.bat
src/: main.py
src/privacy_eraser/: __init__.py  __main__.py  app_state.py  ccleaner_theme.py  cleanerml_loader.py  cleaning.py  config.py  daemon.py  detect_windows.py  dev_data_generator.py  diagnostics.py  gui.py  gui_advanced_mode.py  gui_ccleaner_style.py  gui_debug.py  gui_easy_mode.py  gui_integration.py  gui_settings.py  gui_widgets.py  mock_windows.py  notification_manager.py  schedule_executor.py  scheduler.py  settings_db.py
src/privacy_eraser/cleaners/: brave.xml  google_chrome.xml  microsoft_edge.xml  opera.xml  whale.xml
src/privacy_eraser/core/: __init__.py  cleaner_engine.py  file_utils.py  windows_utils.py
src/privacy_eraser/core/winclean_scripts/: Clear File Explorer history.xml  Delete junk files.xml  Disable telemetry and data collection.xml
src/privacy_eraser/poc/: flet_main.py  main.py
src/privacy_eraser/poc/core/: browser_info.py  data_config.py  poc_cleaner.py
src/privacy_eraser/poc/ui/: browser_card.py  main_window.py  progress_dialog.py  styles.py  undo_dialog.py
src/privacy_eraser/psg_poc/: README.md  __init__.py  cleaner_helper.py  gui.py  main.py
src/privacy_eraser/ui/: main.py
src/privacy_eraser/ui/core/: backup_manager.py  browser_info.py  data_config.py  schedule_manager.py
tests/: conftest.py  test_app_state.py  test_cleanerml_loader.py  test_cleaning_actions.py  test_cleaning_chromium.py  test_detect_windows.py  test_plan.py  test_poc_integration.py  test_poc_simple.py  test_poc_ui.py  test_schedule_executor.py  test_schedule_manager.py  test_scheduler.py  test_settings_db.py
