[project]
name = "privacy_eraser"
version = "1.0.0"
description = "PrivacyEraser - Professional privacy management tool with Flet UI and BleachBit core"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=10.0.0",
    "setuptools>=68",
    "loguru>=0.7.2",
    "rich>=13.7.1",
    "psutil>=5.9.8",
    "apscheduler>=3.11.0",
    "watchdog>=6.0.0",
    "uv>=0.9.4",
    "flet>=0.25.0",
]

[project.scripts]
privacy_eraser = "privacy_eraser.__main__:main"
privacy_eraser_poc = "privacy_eraser.poc.flet_main:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[tool.pytest.ini_options]
addopts = "-q -ra"
testpaths = ["tests"]
