[project]
name = "privacy_eraser"
version = "2.0.0"
description = "PrivacyEraser - Professional privacy management tool with Flet UI and BleachBit core"
readme = "readme.md"
requires-python = ">=3.12"
authors = [
    { name = "seolcoding", email = "contact@seolcoding.com" }
]
dependencies = [
    "flet>=0.28.0",
    "pillow>=10.0.0",
    "loguru>=0.7.2",
    "psutil>=5.9.8",
]

[project.scripts]
privacy_eraser = "privacy_eraser.__main__:main"
privacy_eraser_poc = "privacy_eraser.poc.flet_main:main"

[tool.flet]
org = "com.seolcoding"
product = "Privacy Eraser"
company = "seolcoding"
copyright = "Copyright (C) 2025 seolcoding.com"
build_number = 1

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[tool.pytest.ini_options]
addopts = "-q -ra"
testpaths = ["tests"]
