[project]
name = "privacy_eraser"
version = "2.0.0"
description = "PrivacyEraser - Professional privacy management tool with Flet UI and BleachBit core"
readme = "readme.md"
requires-python = ">=3.12"
authors = [
    { name = "seolcoding", email = "contact@seolcoding.com" }
]
dependencies = [
    "flet>=0.28.0",
    "pillow>=10.0.0",
    "loguru>=0.7.2",
    "psutil>=5.9.8",
    "pyinstaller>=6.16.0",
    "apscheduler>=3.10.0",
    "winotify>=1.1.0",
    "pip>=25.2",
]

[project.scripts]
privacy_eraser = "privacy_eraser.ui.main:main"
privacy_eraser_poc = "privacy_eraser.ui.main:main"

[tool.flet]
org = "com.seolcoding"
product = "Privacy Eraser"
company = "seolcoding"
copyright = "Copyright (C) 2025 seolcoding.com"
build_number = 1
icon = "static/icons/app_icon.ico"

# CRITICAL FIX: Moved exclude to [tool.flet.app] section
# This ensures exclusions are applied to app.zip packaging
# See: KNOWN_ISSUES.md for details on 1.2GB app.zip problem

[tool.flet.app]
# Tell Flet where to find the app
path = "src"

# Exclude unnecessary files from build to reduce size
# CRITICAL: Prevents .venv and development files from being packaged into app.zip
exclude = [
    # Virtual environments (MUST exclude to reduce size)
    ".venv/**/*",
    "venv/**/*",
    ".venv",
    "venv",
    "__pycache__/**/*",
    "*.pyc",
    "*.pyo",
    "*.pyd",

    # Version control and configs
    ".git/**/*",
    ".gitignore",
    ".gitattributes",

    # Editor/IDE files
    ".claude/**/*",
    ".vscode/**/*",
    ".idea/**/*",
    ".cursor/**/*",

    # Documentation and proposals
    "references/**/*",
    "reference/**/*",
    "docs/**/*",
    "proposal_docs/**/*",
    "ai-docs/**/*",
    "claude.md",
    "README.md",
    "RELEASE_NOTES.md",
    "BUILD_OPTIMIZATION.md",
    "KNOWN_ISSUES.md",

    # Test files
    "test_data/**/*",
    "tests/**/*",
    "*.test.py",
    "test_*.py",

    # Build artifacts (root and src)
    "build/**/*",
    "dist/**/*",
    "src/build/**/*",

    # Development scripts
    "scripts/**/*",

    # Temporary files
    ".coverage",
    "*.log",
    "*.tmp",
    "*.zip",
    "*.sha256",

    # Project metadata (not needed in runtime, but keep pyproject.toml for build)
    "uv.lock",
    ".python-version",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[tool.pytest.ini_options]
addopts = "-q -ra"
testpaths = ["tests"]
