[project]
name = "privacy-eraser"
version = "0.1.0"
description = "A PySide6 application for secure data deletion"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["privacy", "security", "pyside6", "qt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "installed-browsers>=0.1.5",
    "pyside6>=6.10.0",
    "qt-material>=2.17",
]

[project.scripts]
privacy-eraser = "privacy_eraser.main_window:run_app"

[project.urls]
Homepage = "https://github.com/yourusername/privacy-eraser"
Repository = "https://github.com/yourusername/privacy-eraser"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["privacy_eraser"]
